--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classes</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <script type="module" src="Members.js"></script>
     <script type="module" src="index.js"></script>
   </head>
   <body>
-    <h1 style="text-align:center;">M A R O O N  5</h1>
-    
+    <h1 id="heading" >M A R O O N  5</h1>
+    <p id="belowheading" ></p>
+      
   </body>
 </html>
