--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <script type="module" src="index.js"></script>
   </head>
   <body>
+    <div>
     <h1 id="heading" >M A R O O N  5</h1>
     <p id="belowheading" ></p>
-      
+  <div class="back">
+    <form action="/index.html" method="GET" class="split">
+      <button class="button"> Home Page </button>
+    </form>
+    </div>
+      </div>
   </body>
 </html>
