--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <p id="belowheading" ></p>
   <div class="back">
     <form action="/index.html" method="GET" class="split">
-      <button class="button"> Home Page </button>
+      <!--<button class="button"> Home Page </button>-->
     </form>
+      <div class="flex-container">
+      <img src="./Photos/M5_Grp1.jpg" class="flex-item" width="100%" height="100%" />
+    </div>
+
     </div>
       </div>
   </body>
