added new html files

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <div>
     <h1 id="heading" >M A R O O N  5</h1>
     <p id="belowheading" ></p>
-  <div class="back">
     <form action="/index.html" method="GET" class="split">
-      <!--<button class="button"> Home Page </button>-->
+      <button class="button"> Home Page </button>
     </form>
+  <br>
       <div class="flex-container">
-      <img src="./Photos/M5_Grp1.jpg" class="flex-item" width="100%" height="100%" />
+      <img src="./Photos/M5_Grp1.jpg" class="flex-item"  />
     </div>
-
-    </div>
+    <p class=""></p>
       </div>
   </body>
 </html>
