updated readme and changed index.html

--- a/index.html
+++ b/index.html
@@ -14,14 +14,41 @@
     <div>
     <h1 id="heading" >M A R O O N  5</h1>
     <p id="belowheading" ></p>
-    <form action="/index.html" method="GET" class="split">
-      <button class="button"> Home Page </button>
-    </form>
+    <div class="button-grp">
+      <button a href="/index.html" class="thisbutton"> Home </button>
+      <button a href="/about.html" class="thisbutton"> About </button>
+      <button a href="/albums.html" class="thisbutton"> Albums </button>
+      <button a href="/merchandise.html" class="thisbutton"> Merchandise </button>
+      <button a href="/newsletter.html" class="thisbutton"> Newsletter </button>
+    </div>
   <br>
       <div class="flex-container">
       <img src="./Photos/M5_Grp1.jpg" class="flex-item"  />
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    <h3 class="performance"> Upcoming Performance</h3>
     </div>
-    <p class=""></p>
       </div>
   </body>
 </html>
