--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <br>
       <br>
     <h3 class="performance"> Upcoming Performance</h3>
+    <img src="./Photos/M5_worldtour.jpg" class="flex-item" />
+    
     </div>
       </div>
   </body>
