created html pages

--- a/about.html
+++ b/about.html
@@ -14,14 +14,16 @@
     <div>
     <h1 id="heading" >M A R O O N  5</h1>
     <p id="belowheading" ></p>
-    <div>
-      <button a href="/index.html" class="button"> Home Page </button>
+    <div class="button-grp">
+      <button onclick="document.location='/index.html'" class="thisbutton"> Home </button>
+      <button onclick="document.location='/about.html'" class="thisbutton"> About </button>
+      <button onclick="document.location='/albums.html'" class="thisbutton"> Albums </button>
+      <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
+      <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
     </div>
-  <br>
-      <div class="flex-container">
-      <img src="./Photos/M5_Grp1.jpg" class="flex-item"  />
+  <br>      
+    <h1 class="performance"> About </h1>
     </div>
-    <h3>About</h3>
       </div>
   </body>
 </html>
