--- a/index.html
+++ b/index.html
@@ -15,41 +15,19 @@
     <h1 id="heading" >M A R O O N  5</h1>
     <p id="belowheading" ></p>
     <div class="button-grp">
-      <button a href="/index.html" class="thisbutton"> Home </button>
-      <button a href="/about.html" class="thisbutton"> About </button>
-      <button a href="/albums.html" class="thisbutton"> Albums </button>
-      <button a href="/merchandise.html" class="thisbutton"> Merchandise </button>
-      <button a href="/newsletter.html" class="thisbutton"> Newsletter </button>
+      <button onclick="document.location='/index.html'" class="thisbutton"> Home </button>
+      <button onclick="document.location='/about.html'" class="thisbutton"> About </button>
+      <button onclick="document.location='/albums.html'" class="thisbutton"> Albums </button>
+      <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
+      <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
     </div>
   <br>
       <div class="flex-container">
       <img src="./Photos/M5_Grp1.jpg" class="flex-item"  />
-      </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    <h3 class="performance"> Upcoming Performance</h3>
+      
+    <h2 class="performance"> Upcoming Performance</h2>
     <img src="./Photos/M5_worldtour.jpg" class="flex-item" />
-    
+    </div>
     </div>
       </div>
   </body>
