--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
     </div>
   <br>      
-    <h1 class="performance"> About </h1>
+    <h1 class="headings"> About </h1>
     </div>
       </div>
   </body>
