--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classes</title>
+    <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script type="module" src="Members.js"></script>
     <script type="module" src="index.js"></script>
@@ -22,12 +23,12 @@
       <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
     </div>
   <br>
-      <div class="flex-container">
-      <img src="./Photos/M5_Grp1.jpg" class="flex-item"  />
-      
-    <h2 class="performance"> Upcoming Performance</h2>
-    <img src="./Photos/M5_worldtour.jpg" class="flex-item" />
-    </div>
+      <!-- <div class="flex-container"> -->
+      <!-- <img src="./Photos/M5_Grp1.jpg" class="flex-item"  /> -->
+      <!-- </div> -->
+      <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="band-cover-img"  />
+    <h2 class="headings"> Upcoming Performance</h2>
+    <img src="./Photos/M5_worldtour.jpg" alt="Maroon5-worldtour" class="world-tour-img" />
     </div>
       </div>
   </body>
