--- a/merchandise.html
+++ b/merchandise.html
@@ -22,7 +22,7 @@
       <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
     </div>
   <br>      
-    <h1 class="performance"> Merchandise </h1>
+    <h1 class="headings"> Merchandise </h1>
     </div>
       </div>
   </body>
