--- a/newsletter.html
+++ b/newsletter.html
@@ -22,7 +22,7 @@
       <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
     </div>
   <br>      
-    <h1 class="performance"> Newsletter </h1>
+    <h1 class="headings"> Newsletter </h1>
     </div>
       </div>
   </body>
