--- a/merchandise.html
+++ b/merchandise.html
@@ -5,7 +5,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Classes</title>
+    <title>Merchandise Page</title>
+    <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script type="module" src="Members.js"></script>
     <script type="module" src="index.js"></script>
