--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <!-- <div class="flex-container"> -->
       <!-- <img src="./Photos/M5_Grp1.jpg" class="flex-item"  /> -->
       <!-- </div> -->
-      <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="band-cover-img"  />
+      <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img"  />
     <h2 class="headings"> Upcoming Performance</h2>
-    <img src="./Photos/M5_worldtour.jpg" alt="Maroon5-worldtour" class="world-tour-img" />
+    <img src="./Photos/M5_worldtour.jpg" class="wt-img" alt="Maroon5-worldtour" />
     </div>
       </div>
   </body>
