--- a/newsletter.html
+++ b/newsletter.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Newsletter Subscription Page</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="normalize.css" rel="stylesheet" type="text/css">
+    <link href="newsletter.css" rel="stylesheet" type="text/css" />
     <script type="module" src="Members.js"></script>
     <script type="module" src="index.js"></script>
   </head>
