--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
       <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
       <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
     </div>
+    </div>
   <br>
       <!-- <div class="flex-container"> -->
       <!-- <img src="./Photos/M5_Grp1.jpg" class="flex-item"  /> -->
       <!-- </div> -->
+      <div>
       <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img"  />
-    <h2 class="headings"> Upcoming Performance</h2>
-    <img src="./Photos/M5_worldtour.jpg" class="wt-img" alt="Maroon5-worldtour" />
-    </div>
       </div>
+      <div>
+    <h2 class="headings"> Upcoming Performance</h2>
+    <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" />
+    <p>Tour Venue</p>
+  </div>
   </body>
 </html>
