--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Classes</title>
+    <title>Home Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="index.css" rel="stylesheet" type="text/css" />
     <script type="module" src="Members.js"></script>
@@ -31,10 +31,20 @@
       <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img"  />
       </div>
       <div>
-    <h2 class="headings"> Upcoming Performance</h2>
+        <div class="subheading">
+          <span style="color:#FF0000">T</span>
+          <span style="color:#66CC66">o</span>
+          <span style="color:#FF9966">u</span>
+          <span style="color:#4033cf">r</span>
+          &nbsp;
+          <span style="color:#8dd9fa">2</span>
+          <span style="color:#7715b8">0</span>
+          <span style="color:#1cd5cc">2</span>
+          <span style="color:#e91888">2</span>
+          </div>
+          <hr>
+          <br>
     <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" />
-
-    <p class="sub-heading">Tour 2022</p>
     <a href="https://ticketmaster.sg/activity/detail/22_maroon5 " class="tour">28 November 2022 National Stadium, Singapore</p>
     <a href="https://link.seated.com/1c05c284-361b-4773-a69c-acbe17c7dec0 " class="tour">30 November 2022 Gocheok Sky Dome Seoul, South Korea</p>
     <p>Tokyo Dome Tokyo, Japan</p>
