--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
           </div>
           <hr>
           <br>
+    
     <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" />
+    <div class="toursection">
     <a href="https://ticketmaster.sg/activity/detail/22_maroon5 " class="tour">28 November 2022 National Stadium, Singapore</p>
     <a href="https://link.seated.com/1c05c284-361b-4773-a69c-acbe17c7dec0 " class="tour">30 November 2022 Gocheok Sky Dome Seoul, South Korea</p>
     <p>Tokyo Dome Tokyo, Japan</p>
 
     <p></p>
-
+    </div>
     </div>
   </div>
   </body>
