--- a/about.html
+++ b/about.html
@@ -13,7 +13,18 @@
   </head>
   <body>
     <div>
-    <h1 id="heading" >M A R O O N  5</h1>
+      <div id="heading">
+        <h1>
+        <span style="color:#FF0000">M</span>
+        <span style="color:#f0f014">A</span>
+        <span style="color:#FF0000">R</span>
+        <span style="color:#f0f014">O</span>
+        <span style="color:#FF0000">O</span>
+        <span style="color:#f0f014">N</span>
+        &nbsp;
+        <span style="color:#FF0000">5</span>
+        </h1>
+        </div>
     <p id="belowheading" ></p>
     <div class="button-grp">
       <button onclick="document.location='/index.html'" class="thisbutton"> Home </button>
@@ -24,7 +35,6 @@
     </div>
   <br>      
     <h1 class="headings"> About </h1>
-    
     </div>
       </div>
   </body>
