--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
   </head>
   <body>
     <div>
-    <h1 id="heading" >M A R O O N  5</h1>
+      <div id="heading">
+        <h1>
+        <span style="color:#FF0000">M</span>
+        <span style="color:#f0f014">A</span>
+        <span style="color:#FF0000">R</span>
+        <span style="color:#f0f014">O</span>
+        <span style="color:#FF0000">O</span>
+        <span style="color:#f0f014">N</span>
+        &nbsp;
+        <span style="color:#FF0000">5</span>
+        </h1>
+        </div>
     <p id="belowheading" ></p>
     <div class="button-grp">
       <button onclick="document.location='/index.html'" class="thisbutton"> Home </button>
@@ -30,29 +41,9 @@
       <div>
       <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img"  />
       </div>
-      <div>
-        <div class="subheading">
-          <span style="color:#FF0000">T</span>
-          <span style="color:#66CC66">o</span>
-          <span style="color:#FF9966">u</span>
-          <span style="color:#4033cf">r</span>
-          &nbsp;
-          <span style="color:#8dd9fa">2</span>
-          <span style="color:#7715b8">0</span>
-          <span style="color:#1cd5cc">2</span>
-          <span style="color:#e91888">2</span>
-          </div>
-          <hr>
-          <br>
-    
-    <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" />
-    <div class="toursection">
-    <a href="https://ticketmaster.sg/activity/detail/22_maroon5 " class="tour">28 November 2022 National Stadium, Singapore</p>
-    <a href="https://link.seated.com/1c05c284-361b-4773-a69c-acbe17c7dec0 " class="tour">30 November 2022 Gocheok Sky Dome Seoul, South Korea</p>
-    <p>Tokyo Dome Tokyo, Japan</p>
-
-    <p></p>
-    </div>
+      <div>    
+        <button onclick="document.location='/tickets.html'" class="ticketbutton"> Tickets </button>
+      </div>
     </div>
   </div>
   </body>
