created ticket html and css

--- a/merchandise.html
+++ b/merchandise.html
@@ -31,7 +31,7 @@
       <button onclick="document.location='/about.html'" class="thisbutton"> About </button>
       <button onclick="document.location='/albums.html'" class="thisbutton"> Albums </button>
       <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
-      <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
+      <button onclick="document.location='/ticket.html'" class="thisbutton"> Tickets </button>
     </div>
   <br>      
     <h1 class="headings"> Merchandise </h1>
