--- a/ticket.html
+++ b/ticket.html
@@ -1,4 +1,4 @@
-<!--Home Page-->
+<!--Ticket Page-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="ticket.css" rel="stylesheet" type="text/css" />
     <script type="module" src="Members.js"></script>
     <script type="module" src="index.js"></script>
   </head>
@@ -44,12 +44,15 @@
           <a href="/about.html"> About </a>
           <a href="/albums.html"> Albums </a>
           <a href="/merchandise.html"> Merchandise </a>
-          <a href="/newsletter.html"> Newsletter </a>
+          <a href="/ticket.html"> Tickets </a>
         </div>
     </div>
   <br>
       <div>
-          <hr>
+        <p></p>
+        <br>
+        <hr>
+        </div>
           <br>
     
     <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" />
