--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <button onclick="document.location='/about.html'" class="thisbutton"> About </button>
       <button onclick="document.location='/albums.html'" class="thisbutton"> Albums </button>
       <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
-      <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
+      <button onclick="document.location='/ticket.html'" class="thisbutton"> Tickets </button>
     </div>
     </div>
   <br>
@@ -40,9 +40,6 @@
       <!-- </div> -->
       <div>
       <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img"  />
-      </div>
-      <div>    
-        <button onclick="document.location='/tickets.html'" class="ticketbutton"> Tickets </button>
       </div>
     </div>
   </div>
