changed css styling

--- a/merchandise.html
+++ b/merchandise.html
@@ -24,6 +24,19 @@
         &nbsp;
         <span style="color:#FF0000">5</span>
         </h1>
+        <div class="subheading">
+          <span style="color:#FF0000">M</span>
+          <span style="color:#66CC66">e</span>
+          <span style="color:#FF9966">r</span>
+          <span style="color:#4033cf">c</span>
+          <span style="color:#8dd9fa">h</span>
+          <span style="color:#7715b8">a</span>
+          <span style="color:#1cd5cc">n</span>
+          <span style="color:#e91888">d</span>
+          <span style="color:#7715b8">i</span>
+          <span style="color:#1cd5cc">s</span>
+          <span style="color:#e91888">e</span>
+          </div>
         </div>
     <p id="belowheading" ></p>
     <div class="button-grp">
