--- a/about.html
+++ b/about.html
@@ -24,6 +24,13 @@
         &nbsp;
         <span style="color:#FF0000">5</span>
         </h1>
+        <div class="subheading">
+          <span style="color:#FF0000">A</span>
+          <span style="color:#66CC66">b</span>
+          <span style="color:#FF9966">o</span>
+          <span style="color:#4033cf">u</span>
+          <span style="color:#8dd9fa">t</span>
+          </div>
         </div>
     <p id="belowheading" ></p>
     <div class="button-grp">
