--- a/albums.html
+++ b/albums.html
@@ -24,6 +24,14 @@
         &nbsp;
         <span style="color:#FF0000">5</span>
         </h1>
+        <div class="subheading">
+          <span style="color:#FF0000">A</span>
+          <span style="color:#66CC66">l</span>
+          <span style="color:#FF9966">b</span>
+          <span style="color:#4033cf">u</span>
+          <span style="color:#8dd9fa">m</span>
+          <span style="color:#7715b8">s</span>
+          </div>
         </div>
     <p id="belowheading" ></p>
     <div class="button-grp">
