--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         &nbsp;
         <span style="color:#FF0000">5</span>
         </h1>
+        <div class="subheading">
+          <span style="color:#FF0000">H</span>
+          <span style="color:#66CC66">o</span>
+          <span style="color:#FF9966">m</span>
+          <span style="color:#4033cf">e</span>
+          &nbsp;
+          <span style="color:#8dd9fa">P</span>
+          <span style="color:#7715b8">a</span>
+          <span style="color:#1cd5cc">g</span>
+          <span style="color:#e91888">e</span>
+          </div>
         </div>
     <p id="belowheading" ></p>
     <div class="button-grp">
