added photos and changed about page

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div>
+      <img src="./Photos/M5_logo.jpg" class="logo-img" alt="Maroon5-logo" />
       <div id="heading">
         <h1>
         <span style="color:#FF0000">M</span>
@@ -41,7 +42,10 @@
       <button onclick="document.location='/ticket.html'" class="thisbutton"> Tickets </button>
     </div>
   <br>      
-    <h1 class="headings"> About </h1>
+    <h1 class="headings"> About Maroon 5</h1>
+    <div class="description">
+      <p class="description"></p>
+    </div>
     </div>
       </div>
   </body>
