--- a/about.html
+++ b/about.html
@@ -9,44 +9,9 @@
     <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="about.css" rel="stylesheet" type="text/css" />
     <script type="module" src="Members.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="about.js"></script>
   </head>
   <body>
-    <div>
-      <img src="./Photos/M5_logo.jpg" class="logo-img" alt="Maroon5-logo" />
-      <div id="heading">
-        <h1>
-        <span style="color:#FF0000">M</span>
-        <span style="color:#f0f014">A</span>
-        <span style="color:#FF0000">R</span>
-        <span style="color:#f0f014">O</span>
-        <span style="color:#FF0000">O</span>
-        <span style="color:#f0f014">N</span>
-        &nbsp;
-        <span style="color:#FF0000">5</span>
-        </h1>
-        <div class="subheading">
-          <span style="color:#FF0000">A</span>
-          <span style="color:#66CC66">b</span>
-          <span style="color:#FF9966">o</span>
-          <span style="color:#4033cf">u</span>
-          <span style="color:#8dd9fa">t</span>
-          </div>
-        </div>
-    <p id="belowheading" ></p>
-    <div class="button-grp">
-      <button onclick="document.location='/index.html'" class="thisbutton"> Home </button>
-      <button onclick="document.location='/about.html'" class="thisbutton"> About </button>
-      <button onclick="document.location='/albums.html'" class="thisbutton"> Albums </button>
-      <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
-      <button onclick="document.location='/ticket.html'" class="thisbutton"> Tickets </button>
-    </div>
-  <br>      
-    <h1 class="headings"> About Maroon 5</h1>
-    <div class="description">
-      <p class="description"></p>
-    </div>
-    </div>
-      </div>
+
   </body>
 </html>
