--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Home Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="index.css" rel="stylesheet" type="text/css" />
-    <script type="module" src="Members.js"></script>
-    <script type="module" src="index.js"></script>
   </head>
   <body>
     <div>
@@ -42,8 +40,7 @@
     </div>
   <br>
       <!-- <div class="flex-container"> -->
-      <!-- <img src="./Photos/M5_Grp1.jpg" class="flex-item"  /> -->
-      <!-- </div> -->
+      <!-- <img src="./Photos/M5_Grp1.jpg" class="flex-item"  /> -->      <!-- </div> -->
       <div>
       <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img"  />
       </div>
