updated button color and added albums link

--- a/albums.html
+++ b/albums.html
@@ -8,40 +8,10 @@
     <title>Albums released</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="albums.css" rel="stylesheet" type="text/css" />
+    <script type="module" src="albums.js"></script>
+    <script type="module" src="albumslist.js"></script>
   </head>
   <body>
-    <div>
-      <div id="heading">
-        <h1>
-        <span style="color:#FF0000">M</span>
-        <span style="color:#f0f014">A</span>
-        <span style="color:#FF0000">R</span>
-        <span style="color:#f0f014">O</span>
-        <span style="color:#FF0000">O</span>
-        <span style="color:#f0f014">N</span>
-        &nbsp;
-        <span style="color:#FF0000">5</span>
-        </h1>
-        <div class="subheading">
-          <span style="color:#FF0000">A</span>
-          <span style="color:#66CC66">l</span>
-          <span style="color:#FF9966">b</span>
-          <span style="color:#4033cf">u</span>
-          <span style="color:#8dd9fa">m</span>
-          <span style="color:#7715b8">s</span>
-          </div>
-        </div>
-    <p id="belowheading" ></p>
-    <div class="button-grp">
-      <button onclick="document.location='/index.html'" class="thisbutton"> Home </button>
-      <button onclick="document.location='/about.html'" class="thisbutton"> About </button>
-      <button onclick="document.location='/albums.html'" class="thisbutton"> Albums </button>
-      <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
-      <button onclick="document.location='/ticket.html'" class="thisbutton"> Tickets </button>
-    </div>
-  <br>      
-    <h1 class="headings"> Albums </h1>
-    </div>
-      </div>
+    
   </body>
 </html>
