--- a/submitted.html
+++ b/submitted.html
@@ -5,9 +5,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merchandise Page</title>
+    <title>Newsletter Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="merchandise.css" rel="stylesheet" type="text/css" />
+    <link href="newsletter.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div>
@@ -41,12 +41,17 @@
       <button onclick="document.location='/index.html'" class="thisbutton"> Home </button>
       <button onclick="document.location='/about.html'" class="thisbutton"> About </button>
       <button onclick="document.location='/albums.html'" class="thisbutton"> Albums </button>
-      <button onclick="document.location='/merchandise.html'" class="thisbutton"> Merchandise </button>
       <button onclick="document.location='/ticket.html'" class="thisbutton"> Tickets </button>
+      <button onclick="document.location='/newsletter.html'" class="thisbutton"> Newsletter </button>
+
     </div>
   <br>      
-    <h1 class="headings"> Merchandise </h1>
-    </div>
+    <h1 class="headings"> Newsletter </h1>
+    <h3> Subscription for latest news on Maroon 5</h3>
+    <br>
+    <h3>You have submitted the form successfully!</h3>
+    <button onclick="document.location='/newsletter.html'" class="submitbutton"> Click here to submit another response </button>
+    
       </div>
   </body>
 </html>
