--- a/newsletter.html
+++ b/newsletter.html
@@ -9,7 +9,7 @@
     <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="newsletter.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body> 
     <div>
       <div id="heading">
         <h1>
@@ -47,9 +47,9 @@
     </div>
   <br>      
     <h1 class="headings"> Newsletter </h1>
-    <h3> Subscription for latest news on Maroon 5</h3>
+    <h3 class="alignment1"> Subscription for latest news on Maroon 5</h3>
     <br>
-    <form action="./submitted.html" method="POST" class="alignment1">
+    <form action="/submitted.html" method="GET" class="alignment1">
       <label for="text"> Name: </label>
       <input type="text" placeholder="Full name">
       <br>
@@ -103,7 +103,7 @@
       <button class="button"> Submit </button><br>
   
     </form>
-    
+    <a href="./newsletter.html" class="socialmedia1">Top</a>  
       </div>
   </body>
 </html>
