--- a/submitted.html
+++ b/submitted.html
@@ -9,7 +9,7 @@
     <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="newsletter.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body> 
     <div>
       <div id="heading">
         <h1>
@@ -47,11 +47,15 @@
     </div>
   <br>      
     <h1 class="headings"> Newsletter </h1>
-    <h3> Subscription for latest news on Maroon 5</h3>
     <br>
-    <h3>You have submitted the form successfully!</h3>
+    <div class="alignment2">
+    <p >You have submitted the form successfully!</p>
     <button onclick="document.location='/newsletter.html'" class="submitbutton"> Click here to submit another response </button>
-    
+    </div>
+    <br>
+    <br>
+    <br>
+    <p> </p>
       </div>
   </body>
 </html>
