--- a/ticket.html
+++ b/ticket.html
@@ -10,7 +10,7 @@
     <link href="ticket.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div>
+    <div> 
         <div id="heading">
             <h1>
             <span style="color:#FF0000">M</span>
@@ -126,14 +126,17 @@
       </div> 
       </div>
       <div></div>
+      <img src="./Photos/M5_nye.jpg" class="nye" alt="New Year's Eve"/>
+      <br>
       <p class="sm">Follow Maroon 5's social media now!</p>
-      <div class="socialmedia">
+      <div class="socialmedia1">
       <a href= "https://www.instagram.com/maroon5/?hl=en"><img src="/Photos/InstagramLogo.png" alt="Maroon5's Instagram" class="socialmedia"></a>  
       <a href= "https://open.spotify.com/artist/04gDigrS5kc9YWfZHwBETP"><img src="/Photos/SpotifyLogo.png" alt="Maroon5's Spotify" class="socialmedia"></a>  
       <a href= "https://twitter.com/maroon5?s=20&t=AzPG7aSlZu4GY9y1mgtCbQ"><img src="/Photos/TwitterLogo.png" alt="Maroon5's Twitter" class="socialmedia"></a>  
       <a href= "https://www.youtube.com/channel/UCBVjMGOIkavEAhyqpxJ73Dw"><img src="/Photos/Youtube.jpg" alt="Maroon5's Youtube channel" class="socialmedia"></a>  
-    
       </div>
+      <a href="./ticket.html" class="socialmedia1">Top</a>  
+
     </div>
   </body>
 </html>
