fixed bugs in tickets.html

--- a/ticket.html
+++ b/ticket.html
@@ -49,10 +49,10 @@
         <br>
         <br>
         </div>
+        <p class="toursection">World Tour 2022!</p>
     
     <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" />
     <div class="toursection">
-          <p>World Tour 2022!</p>
           <div class="country">
             <button class="countrybtn">Singapore</button>
             <div class="country-content">
