--- a/albums.html
+++ b/albums.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Albums released</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="albums.css" rel="stylesheet" type="text/css" />
+    <link href="albums.css" rel="stylesheet" type="text/css" >
     <script type="module" src="albums.js"></script>
     <script type="module" src="albumslist.js"></script>
   </head>
