--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Home Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
     <div>
@@ -42,9 +42,9 @@
       <!-- <div class="flex-container"> -->
       <!-- <img src="./Photos/M5_Grp1.jpg" class="flex-item"  /> -->      <!-- </div> -->
       <div>
-      <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img"  />
+      <img src="./Photos/M5_Grp1.jpg" alt="Maroon5-coverpage" class="bc-img" >
       </div>
-    </div>
+
 
     <p class="sm">Follow Maroon 5's social media now!</p>
     <div class="socialmedia1">
@@ -54,8 +54,7 @@
     <a href= "https://www.youtube.com/channel/UCBVjMGOIkavEAhyqpxJ73Dw"><img src="/Photos/Youtube.jpg" alt="Maroon5's Youtube channel" class="socialmedia"></a>  
   </div>
   <a href="./index.html" class="socialmedia1">Top</a>  
-    </div>
-  
-  </div>
+
+
   </body>
 </html>
