--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>About Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="about.css" rel="stylesheet" type="text/css" />
+    <link href="about.css" rel="stylesheet" type="text/css" >
     <script type="module" src="Members.js"></script>
     <script type="module" src="about.js"></script>
   </head>
