--- a/submitted.html
+++ b/submitted.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Newsletter Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="newsletter.css" rel="stylesheet" type="text/css" />
+    <link href="newsletter.css" rel="stylesheet" type="text/css" >
   </head>
   <body> 
     <div>
