--- a/ticket.html
+++ b/ticket.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Home Page</title>
     <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="ticket.css" rel="stylesheet" type="text/css" />
+    <link href="ticket.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
     <div> 
@@ -51,7 +51,7 @@
         </div>
         <p class="toursection">World Tour 2022!</p>
     
-    <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" />
+    <img src="./Photos/Tour.jpg" class="wt-img" alt="Maroon5-worldtour" >
     <div class="toursection">
           <div class="country">
             <button class="countrybtn">Singapore</button>
@@ -126,7 +126,7 @@
       </div> 
       </div>
       <div></div>
-      <img src="./Photos/M5_nye.jpg" class="nye" alt="New Year's Eve"/>
+      <img src="./Photos/M5_nye.jpg" class="nye" alt="New Year's Eve">
       <br>
       <p class="sm">Follow Maroon 5's social media now!</p>
       <div class="socialmedia1">
@@ -137,7 +137,7 @@
       </div>
       <a href="./ticket.html" class="socialmedia1">Top</a>  
 
-    </div>
+
   </body>
 </html>
 
