--- a/newsletter.html
+++ b/newsletter.html
@@ -23,17 +23,16 @@
         <span style="color:#FF0000">5</span>
         </h1>
         <div class="subheading">
-          <span style="color:#FF0000">M</span>
+          <span style="color:#FF0000">N</span>
           <span style="color:#66CC66">e</span>
-          <span style="color:#FF9966">r</span>
-          <span style="color:#4033cf">c</span>
-          <span style="color:#8dd9fa">h</span>
-          <span style="color:#7715b8">a</span>
-          <span style="color:#1cd5cc">n</span>
-          <span style="color:#e91888">d</span>
-          <span style="color:#7715b8">i</span>
-          <span style="color:#1cd5cc">s</span>
-          <span style="color:#e91888">e</span>
+          <span style="color:#FF9966">w</span>
+          <span style="color:#4033cf">s</span>
+          <span style="color:#8dd9fa">l</span>
+          <span style="color:#7715b8">e</span>
+          <span style="color:#1cd5cc">t</span>
+          <span style="color:#e91888">t</span>
+          <span style="color:#7715b8">e</span>
+          <span style="color:#1cd5cc">r</span>
           </div>
         </div>
     <p id="belowheading" ></p>
